--- a/index.html
+++ b/index.html
@@ -3,18 +3,64 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content=""ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/styles/style.css" />
-    <title>GOPI - Guardians of Pauatahanui</title>
+    <title>GOPI - Guardians of Pāuatahanui</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
-    <div class="home_header">
-
-    
+    <div class="inlet_banner">
+      <img src="styles/images/banner.jpg" alt="Pauatahanui Inlet" width="100%" height="150px">
+      <div class="logo_banner">
+        <img src="styles/images/logo.png" alt="GOPI Logo" width="110px" height="110px">
+      </div>
     </div>
-    <header>
-      
-    </header>
 
+    <div class="nav">
+    <ul>
+      <li><a href="join.html">Join Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="education.html">Education</a></li>
+      <li><a href="mission.html">Our Mission</a></li>
+      <li><a id="currentPg" class="active" href="index.html">Home</a></li>
+    </ul>
+    </div>
+
+    <div class="content">
+      <div class="section_one">
+        <h1>GUARDIANS OF<br><h2>PĀUATAHANUI INLET</h2></h1>
+        <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. 
+          It is at risk, mainly from human activities in both the Inlet and its catchment ...</p>
+        <h3>READ MORE</h3>
+      </div>
+
+      <div class="section_two">
+        <h4>Your donations & support<br><h5>　　　
+        Help us to grow</h5>
+        </h4>
+        <p id="sectionTwo_p">We rely on your support to keep doing what we do; helping keep the beaches clean and safe. 
+          More members means more influence in promoting the community's view on protection of the Inlet and its native wildlife.</p>
+
+          <div class="mainBtn">Join Us</div>
+          <div class="optBtn">Donate Now</div>
+      </div>
+    </div>
+    <script>
+    $(document).ready(function(){
+      console.log('Webpage Successfully Loaded');
+    });
+
+    $('h3').click(function() {
+      window.location.replace("mission.html");
+    });
+
+    $('.mainBtn').click(function() {
+      window.location.replace("join.html");
+    });
+
+    $('.optBtn').click(function() {
+      window.location.replace("join.html");
+    });
+    </script>
   </body>
 </html>
