--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="/styles/style.css" />
     <title>GOPI - Guardians of Pāuatahanui</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="inlet_banner">
@@ -53,5 +54,10 @@
         </div>
 
     </div>
+    <script>
+      $(document).ready(function(){
+        console.log('Webpage Successfully Loaded');
+      });
+    </script>
     </body>
 </html>
