--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/styles/CSS/style.css" />
     <title>GOPI - Guardians of Pāuatahanui</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
+
+    <!-- Desktop starts here -->
     <div class="inlet_banner">
       <img src="styles/images/banner.jpg" alt="Pauatahanui Inlet" width="100%" height="150px">
       <div class="logo_banner">
@@ -45,6 +47,35 @@
           <div class="optBtn">Donate Now</div>
       </div>
     </div>
+
+    <!-- Mobile starts here -->
+    <div class="inlet_banner_mobile">
+      <img src="styles/images/banner_mobile.jpg" alt="Pauatahanui Inlet" width="100%" height="150px">
+      <div class="logo_banner">
+        <img src="styles/images/logo.png" alt="GOPI Logo" width="110px" height="110px">
+      </div>
+    </div>
+
+    <div class="content_mobile">
+      <div class="section_one_mobile">
+        <h1>GUARDIANS OF<br><h2>PĀUATAHANUI INLET</h2></h1>
+        <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. 
+          It is at risk, mainly from human activities in both the Inlet and its catchment ...</p>
+        <h3>READ MORE</h3>
+      </div>
+
+      <div class="section_two_mobile">
+        <h4>Your donations & support<br><h5>Help us to grow</h5></h4>
+        <p id="sectionTwo_p_m">We rely on your support to keep doing what we do; helping keep the beaches clean and safe. 
+          More members means more influence in promoting the community's view on protection of the Inlet and its native wildlife.</p>
+
+          <div class="mainBtn_m">Join Us</div>
+          <div class="optBtn_m">Donate Now</div>
+      </div>
+    </div>
+
+
+    <!-- Javascript starts here -->
     <script>
     $(document).ready(function(){
       console.log('Webpage Successfully Loaded');
