Touch up commit

--- a/education.html
+++ b/education.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/styles/CSS/style.css" />
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="GOPI - Guardians of Pāuatahanui">
+    <meta name="keywords" content="GOPI, Guardians of Pāuatahanui, Inlet, Culture, Heritage, Wildlife">
+    <link rel="stylesheet" type="text/css" href="styles/css/style.css">
     <title>GOPI - Guardians of Pāuatahanui</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
@@ -28,11 +30,11 @@
     <div class="content">
         <div class="section_one">
           <h1>Our<br><h2>Education</h2></h1>
-          <p id="sectionOne_p">Welcome to our education section, where we offer specially prepared resources to help young people learn about the Pāuatahanui Inlet. 
-              Teachers will find curriculum-related materials and activities to be done on Inlet visits. Families may also enjoy some of these activities. 
-              The Pāuatahanui Inlet is a much used educational resource. 
+          <p id="sectionOne_p">Welcome to our education section, where we offer specially prepared resources to help young people learn about the Pāuatahanui Inlet.
+              Teachers will find curriculum-related materials and activities to be done on Inlet visits. Families may also enjoy some of these activities.
+              The Pāuatahanui Inlet is a much used educational resource.
               Primary school groups can often be seen out on field trips with their teachers, gaining an understanding of tidal activity, life on the shore and Inlet ecology.
-              It is also used by secondary students in a range of subjects. 
+              It is also used by secondary students in a range of subjects.
               Its many moods are captured by art and photography groups, its history and personalities provide rich content for talks within the English syllabus, and of course its scientific importance forms the basis of many studies and presentations.
             </p>
         </div>
@@ -41,13 +43,13 @@
                 People<br><h5>　　　　　
                 of the Inlet</h5>
             </h4>
-            <p id="sectionTwo_p">Some very interesting people have lived around the Inlet in the past. One of them is the famous chief Te Rangihaeata. 
-                He was the nephew of Te Rauparaha, who is probably the best known of all the Maori chiefs in the Wellington district. 
+            <p id="sectionTwo_p">Some very interesting people have lived around the Inlet in the past. One of them is the famous chief Te Rangihaeata.
+                He was the nephew of Te Rauparaha, who is probably the best known of all the Maori chiefs in the Wellington district.
                 Te Rangihaeata’s mother was Te Rauparaha’s sister.
-                Te Rangihaeata belonged to the tribe called Ngati Toa. 
-                They were a fierce tribe who fought their way down the North Island trying to find somewhere to establish themselves. 
-                On their way south, they attacked tribes as they passed through Taranaki, Whanganui and Horowhenua. 
-                During this time Te Rangihaeata married one of the women whom he had taken prisoner. 
+                Te Rangihaeata belonged to the tribe called Ngati Toa.
+                They were a fierce tribe who fought their way down the North Island trying to find somewhere to establish themselves.
+                On their way south, they attacked tribes as they passed through Taranaki, Whanganui and Horowhenua.
+                During this time Te Rangihaeata married one of the women whom he had taken prisoner.
                 The tribe migrated down to the Kapiti coast and finally arrived at Porirua where Te Rangihaeata built several pa.
             </p>
         </div>
