--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/styles/CSS/style.css" />
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="GOPI - Guardians of Pāuatahanui">
+    <meta name="keywords" content="GOPI, Guardians of Pāuatahanui, Inlet, Culture, Heritage, Wildlife">
+    <link rel="stylesheet" type="text/css" href="styles/css/style.css">
     <title>GOPI - Guardians of Pāuatahanui</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
@@ -31,7 +33,7 @@
     <div class="content">
       <div class="section_one">
         <h1>GUARDIANS OF<br><h2>PĀUATAHANUI INLET</h2></h1>
-        <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. 
+        <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island.
           It is at risk, mainly from human activities in both the Inlet and its catchment ...</p>
         <h3>READ MORE</h3>
       </div>
@@ -40,7 +42,7 @@
         <h4>Your donations & support<br><h5>　　　
         Help us to grow</h5>
         </h4>
-        <p id="sectionTwo_p">We rely on your support to keep doing what we do; helping keep the beaches clean and safe. 
+        <p id="sectionTwo_p">We rely on your support to keep doing what we do; helping keep the beaches clean and safe.
           More members means more influence in promoting the community's view on protection of the Inlet and its native wildlife.</p>
 
           <div class="mainBtn">Join Us</div>
@@ -59,14 +61,14 @@
     <div class="content_mobile">
       <div class="section_one_mobile">
         <h1>GUARDIANS OF<br><h2>PĀUATAHANUI INLET</h2></h1>
-        <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. 
+        <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island.
           It is at risk, mainly from human activities in both the Inlet and its catchment ...</p>
         <h3>READ MORE</h3>
       </div>
 
       <div class="section_two_mobile">
         <h4>Your donations & support<br><h5>Help us to grow</h5></h4>
-        <p id="sectionTwo_p_m">We rely on your support to keep doing what we do; helping keep the beaches clean and safe. 
+        <p id="sectionTwo_p_m">We rely on your support to keep doing what we do; helping keep the beaches clean and safe.
           More members means more influence in promoting the community's view on protection of the Inlet and its native wildlife.</p>
 
           <div class="mainBtn_m">Join Us</div>
