--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/styles/CSS/style.css" />
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="GOPI - Guardians of Pāuatahanui">
+    <meta name="keywords" content="GOPI, Guardians of Pāuatahanui, Inlet, Culture, Heritage, Wildlife">
+    <link rel="stylesheet" type="text/css" href="styles/css/style.css">
     <title>GOPI - Guardians of Pāuatahanui</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
@@ -38,7 +40,7 @@
                 <form action=" ">
                     <label for="fname">Name</label><br>
                     <input type="text" id="fname" name="firstname" placeholder="Please enter your name."><br><br><br>
-                
+
                     <label for="email">Email</label><br>
                     <input type="text" id="email" name="useremail" placeholder="Please enter email here."><br><br><br>
 
