--- a/mission.html
+++ b/mission.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/styles/CSS/style.css" />
+<head>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="GOPI - Guardians of Pāuatahanui">
+    <meta name="keywords" content="GOPI, Guardians of Pāuatahanui, Inlet, Culture, Heritage, Wildlife">
+    <link rel="stylesheet" type="text/css" href="styles/css/style.css">
     <title>GOPI - Guardians of Pāuatahanui</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
@@ -28,13 +30,13 @@
     <div class="content">
         <div class="section_one">
           <h1>GUARDIANS OF<br><h2>PĀUATAHANUI INLET</h2></h1>
-          <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. 
-              It is at risk, mainly from human activities in both the Inlet and its catchment. 
+          <p id="sectionOne_p">Pāuatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island.
+              It is at risk, mainly from human activities in both the Inlet and its catchment.
               We call ourselves the 'Guardians of Pāuatahanui Inlet' because we work to promote recognition of the ecological, recreational and cultural values of the Inlet.
-              On this website you can read about how we care for the Inlet and promote its wellbeing with central and local government. 
-              You can learn about our activities and policies, and read our newsletters and annual reports. 
-              You will find scientific information about the Inlet and its catchment and links to relevant research. 
-              The section 'The Inlet' contains information about the natural and human history and current concerns about threats to Inlet ecology. 
+              On this website you can read about how we care for the Inlet and promote its wellbeing with central and local government.
+              You can learn about our activities and policies, and read our newsletters and annual reports.
+              You will find scientific information about the Inlet and its catchment and links to relevant research.
+              The section 'The Inlet' contains information about the natural and human history and current concerns about threats to Inlet ecology.
               Teachers can download our educational resources.
             </p>
         </div>
@@ -43,8 +45,8 @@
                 Our<br><h5>　　　　　　　
                 Mission</h5>
             </h4>
-            <p id="sectionTwo_p">Pāuatahanui Inlet has been identified by Greater Wellington Regional Council as an outstanding landscape based on its characteristics and values. 
-                The Inlet is well recognised for its high ecological, aesthetic, recreational and cultural values. 
+            <p id="sectionTwo_p">Pāuatahanui Inlet has been identified by Greater Wellington Regional Council as an outstanding landscape based on its characteristics and values.
+                The Inlet is well recognised for its high ecological, aesthetic, recreational and cultural values.
                 It is classified as a Site of Special Wildlife Interest by the Department of Conservation and recognised in the Regional Coastal Plan as an area of significant conservation value.
                 Our vision, as the Guardians of Pāuatahanui Inlet is to promote and protect the ecological, recreational and cultural values of the Inlet and its catchment area.
             </p>
